--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zxx">
+
 <head>
 	<title>Cassi | Photo Studio HTML Template</title>
 	<meta charset="UTF-8">
@@ -7,19 +8,18 @@
 	<meta name="keywords" content="photo, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/elegant-icons.css"/>
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/elegant-icons.css" />
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="css/style.css" />
 
 
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
+	<link rel="stylesheet" type="text/css"
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 
 </head>
+
 <body>
 	<!-- Page Preloder -->
 	<div id="preloder">
@@ -45,17 +45,21 @@
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
-				<a href="#">Facebook</a>
-				<a href="#">Twitter</a>
-				<a href="#">Instagram</a>
+				<a target="_blank" href="https://www.facebook.com/priyan.darshana.1/">Facebook</a>
+				<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
+				<a target="_blank" href="https://github.com/priyan1995">Github</a>
 			</div>
-			<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
+			<div class="copyright">
+				<p>
+					Copyright &copy;
+					<script>document.write(new Date().getFullYear());</script>
+					by Priyan Darshana
+				</p>
+			</div>
 		</div>
 	</div>
 	<!-- Offcanvas Menu Section end -->
-	
+
 	<!-- Header section -->
 	<header class="header-section">
 		<a href="./index.html" class="site-logo">
@@ -80,7 +84,8 @@
 						</div>
 						<div class="contact-info">
 							<h4>Address</h4>
-							<div class="ci-item"><i class="icon_pin"></i>Iris Watson, Mary land, United State, New York City</div>
+							<div class="ci-item"><i class="icon_pin"></i>Iris Watson, Mary land, United State, New York
+								City</div>
 						</div>
 					</div>
 					<div class="col-lg-7">
@@ -103,13 +108,17 @@
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="footer-social">
-			<a href="#">Facebook</a>
-			<a href="#">Twitter</a>
-			<a href="#">Instagram</a>
+			<a target="_blank" href="https://www.facebook.com/priyan.darshana.1/">Facebook</a>
+			<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
+			<a target="_blank" href="https://github.com/priyan1995">Github</a>
 		</div>
-		<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
+		<div class="copyright">
+			<p>
+				Copyright &copy;
+				<script>document.write(new Date().getFullYear());</script>
+				by Priyan Darshana
+			</p>
+		</div>
 	</footer>
 	<!-- Footer section end -->
 
@@ -120,5 +129,6 @@
 	<script src="js/masonry.pkgd.min.js"></script>
 	<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
