--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
+
 <head>
-	<title>Cassi | Photo Studio HTML Template</title>
+	<title>Priyan Darshana</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Cassi Photo Studio HTML Template">
 	<meta name="keywords" content="photo, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/elegant-icons.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/elegant-icons.css" />
+	<link rel="stylesheet" href="css/owl.carousel.min.css" />
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
-
+	<link rel="stylesheet" href="css/style.css" />
 
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
+	 <!-- ========font awesome ====== -->
+	 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 
 </head>
+
 <body>
 	<!-- Page Preloder -->
 	<div id="preloder">
@@ -47,17 +50,21 @@
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
-				<a href="#">Facebook</a>
-				<a href="#">Twitter</a>
-				<a href="#">Instagram</a>
+				<a target="_blank" href="https://www.facebook.com/priyan.darshana.1/">Facebook</a>
+				<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
+				<a target="_blank" href="https://github.com/priyan1995">Github</a>
 			</div>
-			<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
+			<div class="copyright">
+				<p>
+					Copyright &copy;
+					<script>document.write(new Date().getFullYear());</script>
+					by Priyan Darshana
+				</p>
+			</div>
 		</div>
 	</div>
 	<!-- Offcanvas Menu Section end -->
-	
+
 	<!-- Header section -->
 	<header class="header-section">
 		<a href="./index.html" class="site-logo">
@@ -74,30 +81,48 @@
 		<div class="hero-slider owl-carousel">
 			<div class="hero-item">
 				<div class="hero-text">
-					<div class="ht-cata">Nature</div>
-					<h2>Photo Studio</h2>
-					<p>Cassi – a creative lifestyle photo studio making emotional photography communicate a story. Creative lifestyle photo studio making emotional photography.</p>
+					<div class="ht-cata">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="far fa-star"></i>
+					</div>
+					<h2>UI UX Engineer</h2>
+					<p>Role of UI/UX engineer is to design and code the user interface.UI/UX engineer deals with the front-end development and should Familiarize with UI principles.</p>
 					<a href="#" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
-				<div class="hi-bg set-bg" data-setbg="img/slider-1.jpg"></div>
+				<div class="hi-bg set-bg" data-setbg="img/slider-1.png"></div>
 			</div>
 			<div class="hero-item">
 				<div class="hero-text">
-					<div class="ht-cata">Nature</div>
-					<h2>Photo Studio</h2>
-					<p>Cassi – a creative lifestyle photo studio making emotional photography communicate a story. Creative lifestyle photo studio making emotional photography.</p>
+					<div class="ht-cata">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="far fa-star"></i>
+					</div>
+					<h2>Wordpress Developer</h2>
+					<p>A WordPress developer is a professional who works with the infrastructure of the Wordpress platform; Also theme and plugin development under Wordpress platform.</p>
 					<a href="#" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
-				<div class="hi-bg set-bg" data-setbg="img/slider-2.jpg"></div>
+				<div class="hi-bg set-bg" data-setbg="img/slider-2.png"></div>
 			</div>
 			<div class="hero-item">
 				<div class="hero-text">
-					<div class="ht-cata">Nature</div>
-					<h2>Photo Studio</h2>
-					<p>Cassi – a creative lifestyle photo studio making emotional photography communicate a story. Creative lifestyle photo studio making emotional photography.</p>
+					<div class="ht-cata">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="far fa-star"></i>
+						<i class="far fa-star"></i>
+					</div>
+					<h2>Angular Developer</h2>
+					<p>Delivering a complete and functioning front end application. Ensuring the high performance of said application across all platforms.</p>
 					<a href="#" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
-				<div class="hi-bg set-bg" data-setbg="img/slider-3.jpg"></div>
+				<div class="hi-bg set-bg" data-setbg="img/slider-3.png"></div>
 			</div>
 		</div>
 	</section>
@@ -106,13 +131,17 @@
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="footer-social">
-			<a href="#">Facebook</a>
-			<a href="#">Twitter</a>
-			<a href="#">Instagram</a>
+			<a target="_blank" href="https://www.facebook.com/priyan.darshana.1/">Facebook</a>
+			<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
+			<a target="_blank" href="https://github.com/priyan1995">Github</a>
 		</div>
-		<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
+		<div class="copyright">
+			<p>
+				Copyright &copy;
+				<script>document.write(new Date().getFullYear());</script>
+				by Priyan Darshana
+			</p>
+		</div>
 	</footer>
 	<!-- Footer section end -->
 
@@ -123,5 +152,6 @@
 	<script src="js/masonry.pkgd.min.js"></script>
 	<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
