--- a/portfolio.html
+++ b/portfolio.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="zxx">
-<head>
-	<title>Cassi | Photo Studio HTML Template</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="Cassi Photo Studio HTML Template">
-	<meta name="keywords" content="photo, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/elegant-icons.css"/>
-	<link rel="stylesheet" href="css/fresco.css"/>
-
-	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
-
-
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
-</head>
+	<head>
+		<title>Priyan Darshana</title>
+		<meta charset="UTF-8">
+		<meta name="description" content="Cassi Photo Studio HTML Template">
+		<meta name="keywords" content="photo, html">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Stylesheets -->
+		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" href="css/font-awesome.min.css" />
+		<link rel="stylesheet" href="css/elegant-icons.css" />
+		<link rel="stylesheet" href="css/owl.carousel.min.css" />
+	
+		<!-- Main Stylesheets -->
+		<link rel="stylesheet" href="css/style.css" />
+	
+		<!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+		 <!-- ========font awesome ====== -->
+		 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+	
+	</head>
 <body>
 	<!-- Page Preloder -->
 	<div id="preloder">
@@ -39,21 +40,24 @@
 			</div>
 		</div>
 		<ul class="main-menu">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="gallery.html" class="active">Gallery</a></li>
-			<li><a href="blog.html">Blog</a></li>
+			<li><a href="index.html" class="active">Home</a></li>
+			<li><a href="Portfolio.html">Portfolio</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
-				<a href="#">Facebook</a>
-				<a href="#">Twitter</a>
-				<a href="#">Instagram</a>
+				<a target="_blank" href="https://www.facebook.com/priyan.darshana.1/">Facebook</a>
+				<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
+				<a target="_blank" href="https://github.com/priyan1995">Github</a>
 			</div>
-			<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
+			<div class="copyright">
+				<p>
+					Copyright &copy;
+					<script>document.write(new Date().getFullYear());</script>
+					by Priyan Darshana
+				</p>
+			</div>
 		</div>
 	</div>
 	<!-- Offcanvas Menu Section end -->
@@ -73,38 +77,38 @@
 	<section class="gallery-section">
 		<div class="row gallery-gird">
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/1.jpg" data-fresco-group="projects">
+				<a class="gallery-item "  href="http://isurumahesh.com/KFM/" target="_blank">
 					<img src="img/projects/1.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>KFM Website</h4>
+						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/2.jpg" data-fresco-group="projects">
+				<a class="gallery-item" href="http://www.myframekw.com/" target="_blank">
 					<img src="img/projects/2.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>MyFrame Website</h4>
+						<p>HTML</p>
 					</div>
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/3.jpg" data-fresco-group="projects">
+				<a class="gallery-item " href="https://bflydigital.com/" target="_blank">
 					<img src="img/projects/3.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>BflyDigital Website</h4>
+						<p>HTML</p>
 					</div>
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/4.jpg" data-fresco-group="projects">
+				<a class="gallery-item " href="https://www.sanatiospa.lk/" target="_blank">
 					<img src="img/projects/4.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>Sanatio Spa</h4>
+						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
@@ -226,13 +230,17 @@
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="footer-social">
-			<a href="#">Facebook</a>
-			<a href="#">Twitter</a>
-			<a href="#">Instagram</a>
+			<a target="_blank" href="https://www.facebook.com/priyan.darshana.1/">Facebook</a>
+			<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
+			<a target="_blank" href="https://github.com/priyan1995">Github</a>
 		</div>
-		<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
+		<div class="copyright">
+			<p>
+				Copyright &copy;
+				<script>document.write(new Date().getFullYear());</script>
+				by Priyan Darshana
+			</p>
+		</div>
 	</footer>
 	<!-- Footer section end -->
 
