--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					</div>
 					<h2>UI UX Engineer</h2>
 					<p>Role of UI/UX engineer is to design and code the user interface.UI/UX engineer deals with the front-end development and should Familiarize with UI principles.</p>
-					<a href="#" class="ht-btn">See More <i class="arrow_right"></i></a>
+					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
 				<div class="hi-bg set-bg" data-setbg="img/slider-1.png"></div>
 			</div>
@@ -104,7 +104,7 @@
 					</div>
 					<h2>Wordpress Developer</h2>
 					<p>A WordPress developer is a professional who works with the infrastructure of the Wordpress platform; Also theme and plugin development under Wordpress platform.</p>
-					<a href="#" class="ht-btn">See More <i class="arrow_right"></i></a>
+					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
 				<div class="hi-bg set-bg" data-setbg="img/slider-2.png"></div>
 			</div>
@@ -119,7 +119,7 @@
 					</div>
 					<h2>Angular Developer</h2>
 					<p>Delivering a complete and functioning front end application. Ensuring the high performance of said application across all platforms.</p>
-					<a href="#" class="ht-btn">See More <i class="arrow_right"></i></a>
+					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
 				<div class="hi-bg set-bg" data-setbg="img/slider-3.png"></div>
 			</div>
