--- a/portfolio.html
+++ b/portfolio.html
@@ -122,11 +122,11 @@
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/6.jpg" data-fresco-group="projects">
+				<a class="gallery-item " href="http://kodafi.com/dev/" target="_blank">
 					<img src="img/projects/6.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>Ko-Da-Fi Website</h4>
+						<p>HTML</p>
 					</div>
 				</a>
 			</div>
