--- a/portfolio.html
+++ b/portfolio.html
@@ -113,11 +113,11 @@
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/5.jpg" data-fresco-group="projects">
+				<a class="gallery-item" href="http://wrmarcdesigns.com/" target="_blank">
 					<img src="img/projects/5.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>WRM Architechture</h4>
+						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
@@ -131,47 +131,47 @@
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/7.jpg" data-fresco-group="projects">
+				<a class="gallery-item" href="http://lankanewsweek.com/" target="_blank">
 					<img src="img/projects/7.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>Lanka Newsweek</h4>
+						<p>PHP</p>
 					</div>
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/8.jpg" data-fresco-group="projects">
+				<a class="gallery-item" href="https://www.creationsmaster.com/" target="_blank">
 					<img src="img/projects/8.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>Creation Master Builders</h4>
+						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/11.jpg" data-fresco-group="projects">
+				<a class="gallery-item" href="http://www.camlolanka.com/" target="_blank">
 					<img src="img/projects/11.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>Camlo Lanka Website</h4>
+						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/9.jpg" data-fresco-group="projects">
+				<a class="gallery-item " href="http://www.nestacademy.lk/" target="_blank">
 					<img src="img/projects/9.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>Nest Academy Website</h4>
+						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/10.jpg" data-fresco-group="projects">
+				<a class="gallery-item" href="http://www.cocofresh.lk/" target="_blank">
 					<img src="img/projects/10.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>Coco Fresh Website</h4>
+						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
