--- a/portfolio.html
+++ b/portfolio.html
@@ -176,54 +176,54 @@
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/12.jpg" data-fresco-group="projects">
+				<a class="gallery-item " href="https://www.ownetutor.lk/" target="_blank">
 					<img src="img/projects/12.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>Own E-Tutor</h4>
+						<p>HTML/Css</p>
 					</div>
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/13.jpg" data-fresco-group="projects">
+				<a class="gallery-item " href="http://www.tsaragreentea.com/" target="_blank">
 					<img src="img/projects/13.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>Tsara Website</h4>
+						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/15.jpg" data-fresco-group="projects">
+				<a class="gallery-item" href="http://piyawardenaassociates.com/esessecretaries.lk" target="_blank">
 					<img src="img/projects/15.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>ESES SECRETARIES</h4>
+						<p>HTML/CSS</p>
 					</div>
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/16.jpg" data-fresco-group="projects">
+				<a class="gallery-item " href="https://www.nsbm.ac.lk/" target="_blank">
 					<img src="img/projects/16.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>NSBM - Responsive/few pages developed</h4>
+						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="img/projects/14.jpg" data-fresco-group="projects">
+				<a class="gallery-item " href="http://bflydigital.com/ISF/" target="_blank">
 					<img src="img/projects/14.jpg" alt="">
 					<div class="gi-text">
-						<h4>Forest and Nature</h4>
-						<p>Natures / Tree</p>
+						<h4>ISF Website</h4>
+						<p>HTML / CSS</p>
 					</div>
 				</a>
 			</div>
 		</div>
-		<div class="text-center pt-5">
+		<!-- <div class="text-center pt-5">
 			<button class="site-btn">Load More</button>
-		</div>
+		</div> -->
 	</section>
 	<!-- Gallery section end -->
 
