--- a/about.html
+++ b/about.html
@@ -38,11 +38,9 @@
 			</div>
 		</div>
 		<ul class="main-menu">
-			<li><a href="index.html" >Home</a></li>
-			<li><a href="gallery.html">Gallery</a></li>
-			<li><a href="blog.html">Blog</a></li>
-			<li><a href="about.html" class="active">About</a></li>
-			<li><a href="contact.html">Contact</a></li>
+			<li><a href="index.html" class="active">Home</a></li>
+			<li><a href="Portfolio.html">Portfolio</a></li>
+			<li><a href="about.html">About</a></li>
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
