--- a/about.html
+++ b/about.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="zxx">
-<head>
-	<title>Cassi | Photo Studio HTML Template</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="Cassi Photo Studio HTML Template">
-	<meta name="keywords" content="photo, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/elegant-icons.css"/>
-
-	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
-
-
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
-</head>
+	<head>
+		<title>Priyan Darshana</title>
+		<meta charset="UTF-8">
+		<meta name="description" content="Cassi Photo Studio HTML Template">
+		<meta name="keywords" content="photo, html">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Stylesheets -->
+		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" href="css/font-awesome.min.css" />
+		<link rel="stylesheet" href="css/elegant-icons.css" />
+		<link rel="stylesheet" href="css/owl.carousel.min.css" />
+	
+		<!-- Main Stylesheets -->
+		<link rel="stylesheet" href="css/style.css" />
+	
+		<!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+		 <!-- ========font awesome ====== -->
+		 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+	
+	</head>
 <body>
 	<!-- Page Preloder -->
 	<div id="preloder">
@@ -44,13 +46,17 @@
 		</ul>
 		<div class="menu-footer">
 			<div class="footer-social">
-				<a href="#">Facebook</a>
-				<a href="#">Twitter</a>
-				<a href="#">Instagram</a>
+				<a target="_blank" href="https://www.facebook.com/priyan.darshana.1/">Facebook</a>
+				<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
+				<a target="_blank" href="https://github.com/priyan1995">Github</a>
 			</div>
-			<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
+			<div class="copyright">
+				<p>
+					Copyright &copy;
+					<script>document.write(new Date().getFullYear());</script>
+					by Priyan Darshana
+				</p>
+			</div>
 		</div>
 	</div>
 	<!-- Offcanvas Menu Section end -->
@@ -68,12 +74,12 @@
 
 	<!-- Page top section -->
 	<div class="page-top-section">
-		<div class="page-top-warp set-bg" data-setbg="img/page-bg-1.jpg">
+		<div class="page-top-warp set-bg" data-setbg="img/page-abt-bg.jpg">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-9">
-						<h2>Wellcome To Cassi</h2>
-						<p>These companies release their own versions of the operating systems with minor changes, and yet always with the same bottom line.</p>
+						<h2>Priyan Darshana</h2>
+						<p>Front-End Engineer / UI UX Engineer / Wordpress Developer</p>
 					</div>
 				</div>
 			</div>
@@ -110,130 +116,22 @@
 	</section>
 	<!-- About section end -->
 
-	<!-- Team section -->
-	<section class="team-section">
-		<div class="container-fluid">
-			<div class="text-center text-white mb-5">
-				<h2>What We Do?</h2>
-			</div>
-			<div class="row">
-				<div class="col-xl-2 col-md-4 col-sm-6 p-0">
-					<div class="team-item">
-						<img src="img/team-1.jpg" alt="">
-						<div class="team-meta">
-							<div class="tm-text">
-								<h5>Jackson Nash</h5>
-								<p>Designer</p>
-								<div class="tm-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-2 col-md-4 col-sm-6 p-0">
-					<div class="team-item">
-						<img src="img/team-2.jpg" alt="">
-						<div class="team-meta">
-							<div class="tm-text">
-								<h5>Jackson Nash</h5>
-								<p>Photographer</p>
-								<div class="tm-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-2 col-md-4 col-sm-6 p-0">
-					<div class="team-item">
-						<img src="img/team-3.jpg" alt="">
-						<div class="team-meta">
-							<div class="tm-text">
-								<h5>Jackson Nash</h5>
-								<p>Photographer / Ceo</p>
-								<div class="tm-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-2 col-md-4 col-sm-6 p-0">
-					<div class="team-item">
-						<img src="img/team-4.jpg" alt="">
-						<div class="team-meta">
-							<div class="tm-text">
-								<h5>Jackson Nash</h5>
-								<p>Manager</p>
-								<div class="tm-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-2 col-md-4 col-sm-6 p-0">
-					<div class="team-item">
-						<img src="img/team-5.jpg" alt="">
-						<div class="team-meta">
-							<div class="tm-text">
-								<h5>Jackson Nash</h5>
-								<p>Photographer</p>
-								<div class="tm-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-2 col-md-4 col-sm-6 p-0">
-					<div class="team-item">
-						<img src="img/team-6.jpg" alt="">
-						<div class="team-meta">
-							<div class="tm-text">
-								<h5>Jackson Nash</h5>
-								<p>Photographer</p>
-								<div class="tm-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-linkedin"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Team section end -->
+
 
 	<!-- Footer section -->
 	<footer class="footer-section">
 		<div class="footer-social">
-			<a href="#">Facebook</a>
-			<a href="#">Twitter</a>
-			<a href="#">Instagram</a>
+			<a target="_blank" href="https://www.facebook.com/priyan.darshana.1/">Facebook</a>
+			<a target="_blank" href="https://www.linkedin.com/in/priyan-darshana-487a571b1/">LinkedIn</a>
+			<a target="_blank" href="https://github.com/priyan1995">Github</a>
 		</div>
-		<div class="copyright"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
+		<div class="copyright">
+			<p>
+				Copyright &copy;
+				<script>document.write(new Date().getFullYear());</script>
+				by Priyan Darshana
+			</p>
+		</div>
 	</footer>
 	<!-- Footer section end -->
 
