about me section complete

--- a/about.html
+++ b/about.html
@@ -76,10 +76,13 @@
 	<div class="page-top-section">
 		<div class="page-top-warp set-bg" data-setbg="img/page-abt-bg.jpg">
 			<div class="container">
-				<div class="row">
-					<div class="col-lg-9">
+				<div class="row pd-just-centered">
+					<div class="col-lg-8">
 						<h2>Priyan Darshana</h2>
 						<p>Front-End Engineer / UI UX Engineer / Wordpress Developer</p>
+					</div>
+					<div class="col-lg-4 pd-prof-img-sec">
+						<img src="img/priyan-prof.jpg">
 					</div>
 				</div>
 			</div>
@@ -92,12 +95,19 @@
 		<div class="container">
 			<div class="row about-item">
 				<div class="col-lg-3">
-					<h2>Our Story</h2>
+					<h2>About Me</h2>
 				</div>
 				<div class="col-lg-9">
 					<div class="ai-text">
-						<h4>I was caught up in a web of negativity and needed someone or something to help me to escape.</h4>
-						<p>Photographs are a way of preserving a moment in our lives for the rest of our lives. Many of us have at least been tempted at the flashy array of photo printers which seemingly leap off the shelves at even the least tech-savvy. It surely seems old fashioned to talk about 35mm film and non-digital cameras in today’s day and age. To our children, cameras not so feature rich with LCD screens and built in Wi-Fi is as foreign as Atari. However, the innovation of home photo printing is bringing about a new way of preserving our most precious memories. Not only do we have digital copies to keep with us for the rest of our days across hundreds of different archives.</p>
+						<h4>Front-End Engineer / UI UX Engineer / Wordpress Developer</h4>
+						<p>
+							I am a front-end engineer who has developed products for more than 38 clients.I have developed Websites, Basic systems and System front-ends. I am passionate about building excellent web-based appication front-ends and I am BIT under graduate from University of Colombo school of computing.
+						</p>
+						<p>
+							Over 2 years of web development experience and 1+ years of industry experience, I have worked for clients ranging from individuals and small businesses all the way to large corporations. I have a serious passion for UI effects, animations and creating intuitive, dynamic user experiences.
+						</p>
+						<p>
+							Feel free to take a look at my latest projects on the <a href="Portfolio.html">portfolio page.</a></p>
 					</div>
 				</div>
 			</div>
