about page development completed

--- a/about.html
+++ b/about.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="zxx">
-	<head>
-		<title>Priyan Darshana</title>
-		<meta charset="UTF-8">
-		<meta name="description" content="Cassi Photo Studio HTML Template">
-		<meta name="keywords" content="photo, html">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- Stylesheets -->
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/font-awesome.min.css" />
-		<link rel="stylesheet" href="css/elegant-icons.css" />
-		<link rel="stylesheet" href="css/owl.carousel.min.css" />
-	
-		<!-- Main Stylesheets -->
-		<link rel="stylesheet" href="css/style.css" />
-	
-		<!--[if lt IE 9]>
+
+<head>
+	<title>Priyan Darshana</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="Cassi Photo Studio HTML Template">
+	<meta name="keywords" content="photo, html">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/elegant-icons.css" />
+	<link rel="stylesheet" href="css/owl.carousel.min.css" />
+
+	<!-- Main Stylesheets -->
+	<link rel="stylesheet" href="css/style.css" />
+
+	<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-		 <!-- ========font awesome ====== -->
-		 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-	
-	</head>
+	<!-- ========font awesome ====== -->
+	<link rel="stylesheet" type="text/css"
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+
+</head>
+
 <body>
 	<!-- Page Preloder -->
 	<div id="preloder">
@@ -60,7 +63,7 @@
 		</div>
 	</div>
 	<!-- Offcanvas Menu Section end -->
-	
+
 	<!-- Header section -->
 	<header class="header-section">
 		<a href="./index.html" class="site-logo">
@@ -93,6 +96,7 @@
 	<!-- About section -->
 	<section class="about-section">
 		<div class="container">
+			<!-- === about me section === -->
 			<div class="row about-item">
 				<div class="col-lg-3">
 					<h2>About Me</h2>
@@ -101,27 +105,305 @@
 					<div class="ai-text">
 						<h4>Front-End Engineer / UI UX Engineer / Wordpress Developer</h4>
 						<p>
-							I am a front-end engineer who has developed products for more than 38 clients.I have developed Websites, Basic systems and System front-ends. I am passionate about building excellent web-based appication front-ends and I am BIT under graduate from University of Colombo school of computing.
+							I am a front-end engineer who has developed products for more than 38 clients.I have
+							developed Websites, Basic systems and System front-ends. I am passionate about building
+							excellent web-based appication front-ends and I am BIT under graduate from University of
+							Colombo school of computing.
 						</p>
 						<p>
-							Over 2 years of web development experience and 1+ years of industry experience, I have worked for clients ranging from individuals and small businesses all the way to large corporations. I have a serious passion for UI effects, animations and creating intuitive, dynamic user experiences.
+							Over 2 years of web development experience and 1+ years of industry experience, I have
+							worked for clients ranging from individuals and small businesses all the way to large
+							corporations. I have a serious passion for UI effects, animations and creating intuitive,
+							dynamic user experiences.
 						</p>
 						<p>
-							Feel free to take a look at my latest projects on the <a href="Portfolio.html">portfolio page.</a></p>
+							Feel free to take a look at my latest projects on the <a href="Portfolio.html">portfolio
+								page.</a></p>
 					</div>
 				</div>
 			</div>
-			<div class="row about-item">
+			<!-- === Education section === -->
+			<div class="row about-item pd-edu">
 				<div class="col-lg-3">
-					<h2>What We Do?</h2>
+					<h2>Education</h2>
 				</div>
 				<div class="col-lg-9">
 					<div class="ai-text">
-						<h4>Audio player software is used to play back sound recordings in one of the many formats available for computers today.</h4>
-						<p>Photographs are a way of preserving a moment in our lives for the rest of our lives. Many of us have at least been tempted at the flashy array of photo printers which seemingly leap off the shelves at even the least tech-savvy. It surely seems old fashioned to talk about 35mm film and non-digital cameras in today’s day and age. To our children, cameras not so feature rich with LCD screens and built in Wi-Fi is as foreign as Atari. However, the innovation of home photo printing is bringing about a new way of preserving our most precious memories. Not only do we have digital copies to keep with us for the rest of our days across hundreds of different archives.</p>
+						<h4>- University of Colombo School Of Computing</h4>
+						<p>Bachalore Of Information Technology ( Final Year / GPA: 3.01 )</p>
+
+						<h4>- Vidyaraja National School</h4>
+						<p> GCE O/L (A7,B1,C1) </p>
+						<p> GCE A/L (A2,B1,C1) </p>
+						
 					</div>
 				</div>
 			</div>
+			<!-- ==== employement history ==== -->
+			<div class="row about-item emp-history">
+				<div class="col-lg-3">
+					<h2>Employment History</h2>
+				</div>
+				<div class="col-lg-9">
+					<div class="ai-text">
+						<h4>-Dream Squad Private Limited</h4>
+						<p>
+							<span>Front-end Engineer</span> <br>
+							From 2020-02-10 To Present
+						</p>
+					</div>
+
+					<div class="ai-text">
+						<h4>-Web Lankan Private Limited</h4>
+						<p>
+							<span>UI/UX Engineer</span> <br>
+							From 2019-06-13 To 2020-01-31
+						</p>
+					</div>
+
+					<div class="ai-text">
+						<h4>-Ozone Desk Private Limited</h4>
+						<p>
+							<span>Trainee Web Developer</span> <br>
+							From 2018-12-12 To 2020-05-25
+						</p>
+					</div>
+
+				</div>
+			</div>
+
+			<!-- ==== skills section ==== -->
+			<div class="row about-item pd-skills">
+				<div class="col-lg-3">
+					<h2>Skills</h2>
+				</div>
+				<div class="col-lg-9 row ai-text">
+					<!-- item -->
+					<div class="col-lg-4">
+						<div class="pd-card">
+							<h4>HTML</h4>
+							<p>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+							</p>
+						</div>
+					</div>
+
+					<!-- item -->
+					<div class="col-lg-4">
+						<div class="pd-card">
+							<h4>CSS</h4>
+							<p>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="far fa-star"></i>
+							</p>
+						</div>
+					</div>
+
+					<!-- item -->
+					<div class="col-lg-4">
+						<div class="pd-card">
+							<h4>SCSS</h4>
+							<p>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="far fa-star"></i>
+								<i class="far fa-star"></i>
+							</p>
+						</div>
+					</div>
+
+					<!-- item -->
+					<div class="col-lg-4">
+						<div class="pd-card">
+							<h4>PHP</h4>
+							<p>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="far fa-star"></i>
+								<i class="far fa-star"></i>
+							</p>
+						</div>
+					</div>
+
+					<!-- item -->
+					<div class="col-lg-4">
+						<div class="pd-card">
+							<h4>Javascript</h4>
+							<p>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="far fa-star"></i>
+								<i class="far fa-star"></i>
+							</p>
+						</div>
+					</div>
+
+					<!-- item -->
+					<div class="col-lg-4">
+						<div class="pd-card">
+							<h4>Typescript</h4>
+							<p>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="far fa-star"></i>
+								<i class="far fa-star"></i>
+								<i class="far fa-star"></i>
+							</p>
+						</div>
+					</div>
+
+					<!-- item -->
+					<div class="col-lg-4">
+						<div class="pd-card">
+							<h4>JQuery</h4>
+							<p>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="far fa-star"></i>
+								<i class="far fa-star"></i>
+							</p>
+						</div>
+					</div>
+
+					<!-- item -->
+					<div class="col-lg-4">
+						<div class="pd-card">
+							<h4>Angular</h4>
+							<p>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="far fa-star"></i>
+								<i class="far fa-star"></i>
+							</p>
+						</div>
+					</div>
+
+					<!-- item -->
+					<div class="col-lg-4">
+						<div class="pd-card">
+							<h4>bootstrap</h4>
+							<p>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="far fa-star"></i>
+							</p>
+						</div>
+					</div>
+
+					<!-- item -->
+					<div class="col-lg-4">
+						<div class="pd-card">
+							<h4>Photoshop</h4>
+							<p>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="far fa-star"></i>
+							</p>
+						</div>
+					</div>
+
+
+					<!-- item -->
+					<div class="col-lg-4">
+						<div class="pd-card">
+							<h4>Shopify</h4>
+							<p>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="far fa-star"></i>
+								<i class="far fa-star"></i>
+							</p>
+						</div>
+					</div>
+
+					<!-- item -->
+					<div class="col-lg-4">
+						<div class="pd-card">
+							<h4>Wordpress</h4>
+							<p>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="far fa-star"></i>
+							</p>
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+
+
+			<!-- ==== Other Skills ==== -->
+			<div class="row about-item other-skills">
+				<div class="col-lg-3">
+					<h2>Other Skills</h2>
+				</div>
+				<div class="col-lg-9">
+					<div class="ai-text">
+						<p>- Teamwork Skills</p>
+						<p>- Familiar with Agile</p>
+						<p>- Familiar with Version Control Systems ( GIT )</p>
+						<p>- Familiar with Scrum</p>
+						<p>- Design skills</p>
+						<p>- Familiar with Azure Devops</p>
+						<p>- Familiar with Bitbucket</p>
+						<p>- Familiar with Bitbucket</p>
+						<p>- Familiar with Trello</p>
+
+					</div>
+
+
+
+
+
+				</div>
+			</div>
+
+			<!-- ==== Contact Details ==== -->
+			<div class="row about-item other-skills">
+				<div class="col-lg-3">
+					<h2>Contact Details</h2>
+				</div>
+				<div class="col-lg-9">
+					<div class="ai-text">
+						<p>- Phone : <a href="tel:+94756095890">+9475 609 5890</a> </p>
+						<p>- Email : <a href="mailto:priyan1995darshana@gmail.com">priyan1995darshana@gmail.com</a> </p>
+						<p>- Social :
+							<a href="https://www.linkedin.com/in/priyan-darshana-487a571b1/" target="_blank">
+								<i class="fab fa-linkedin"></i>
+							</a>
+							<a href="https://www.facebook.com/priyan.darshana.1/" target="_blank">
+								<i class="fab fa-facebook-square"></i>
+							</a>
+						</p>
+					</div>
+
+
+
+
+
+				</div>
+			</div>
+
 		</div>
 	</section>
 	<!-- About section end -->
@@ -152,5 +434,6 @@
 	<script src="js/masonry.pkgd.min.js"></script>
 	<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
