responsive issues fixed

--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
 						<h4>- Vidyaraja National School</h4>
 						<p> GCE O/L (A7,B1,C1) </p>
 						<p> GCE A/L (A2,B1,C1) </p>
-						
+
 					</div>
 				</div>
 			</div>
@@ -394,13 +394,11 @@
 							<a href="https://www.facebook.com/priyan.darshana.1/" target="_blank">
 								<i class="fab fa-facebook-square"></i>
 							</a>
+							<a href="https://wa.me/+94756095890" target="_blank">
+								<i class="fab fa-whatsapp-square"></i>
+							</a>
 						</p>
 					</div>
-
-
-
-
-
 				</div>
 			</div>
 
