--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Priyan Darshana</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Cassi Photo Studio HTML Template">
+	<meta name="description" content="Priyan Darshana">
 	<meta name="keywords" content="photo, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
