--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 		</div>
 		<ul class="main-menu">
 			<li><a href="index.html" class="active">Home</a></li>
-			<li><a href="Portfolio.html">Portfolio</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
 			<li><a href="about.html">About</a></li>
 		</ul>
 		<div class="menu-footer">
@@ -117,7 +117,7 @@
 							dynamic user experiences.
 						</p>
 						<p>
-							Feel free to take a look at my latest projects on the <a href="Portfolio.html">portfolio
+							Feel free to take a look at my latest projects on the <a href="portfolio.html">portfolio
 								page.</a></p>
 					</div>
 				</div>
