--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</div>
 		<ul class="main-menu">
 			<li><a href="index.html" class="active">Home</a></li>
-			<li><a href="Portfolio.html">Portfolio</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
 			<li><a href="about.html">About</a></li>
 		</ul>
 		<div class="menu-footer">
