new projects added to the portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -75,20 +75,64 @@
 	<!-- Gallery section -->
 	<section class="gallery-section">
 		<div class="row gallery-gird">
+
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item "  href="http://isurumahesh.com/KFM/" target="_blank">
+				<a class="gallery-item "  href="https://epsicontraffic.com.au/" target="_blank">
 					<img src="img/projects/1.jpg" alt="">
 					<div class="gi-text">
-						<h4>KFM Website</h4>
+						<h4>Epsicon Traffic Management</h4>
 						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
+
+			<!-- <div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item "  href="https://epsicontraffic.com.au/" target="_blank">
+					<img src="img/projects/1.jpg" alt="">
+					<div class="gi-text">
+						<h4>Epsicon Traffic Management</h4>
+						<p>Wordpress</p>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item "  href="https://epsicontraffic.com.au/" target="_blank">
+					<img src="img/projects/1.jpg" alt="">
+					<div class="gi-text">
+						<h4>Epsicon Traffic Management</h4>
+						<p>Wordpress</p>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item "  href="https://epsicontraffic.com.au/" target="_blank">
+					<img src="img/projects/1.jpg" alt="">
+					<div class="gi-text">
+						<h4>Epsicon Traffic Management</h4>
+						<p>Wordpress</p>
+					</div>
+				</a>
+			</div> -->
+
+
+			<!-- ========== -->
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item "  href="https://epsicontraffic.com.au/" target="_blank">
+					<img src="img/projects/1.jpg" alt="">
+					<div class="gi-text">
+						<h4>Epsicon Traffic Management</h4>
+						<p>Wordpress</p>
+					</div>
+				</a>
+			</div>
+
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item" href="http://www.myframekw.com/" target="_blank">
 					<img src="img/projects/2.jpg" alt="">
 					<div class="gi-text">
-						<h4>MyFrame Website</h4>
+						<h4>MyFrame</h4>
 						<p>HTML</p>
 					</div>
 				</a>
@@ -97,7 +141,7 @@
 				<a class="gallery-item " href="https://bflydigital.com/" target="_blank">
 					<img src="img/projects/3.jpg" alt="">
 					<div class="gi-text">
-						<h4>BflyDigital Website</h4>
+						<h4>BflyDigital</h4>
 						<p>HTML</p>
 					</div>
 				</a>
@@ -124,7 +168,7 @@
 				<a class="gallery-item " href="http://kodafi.com/dev/" target="_blank">
 					<img src="img/projects/6.jpg" alt="">
 					<div class="gi-text">
-						<h4>Ko-Da-Fi Website</h4>
+						<h4>Ko-Da-Fi</h4>
 						<p>HTML</p>
 					</div>
 				</a>
