--- a/portfolio.html
+++ b/portfolio.html
@@ -77,10 +77,10 @@
 		<div class="row gallery-gird">
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item "  href="https://epsicontraffic.com.au/" target="_blank">
-					<img src="img/projects/1.jpg" alt="">
+				<a class="gallery-item "  href="https://gracelandteafactory.com/" target="_blank">
+					<img src="img/projects/17.jpg" alt="">
 					<div class="gi-text">
-						<h4>Epsicon Traffic Management</h4>
+						<h4>Graceland Tea Factory</h4>
 						<p>Wordpress</p>
 					</div>
 				</a>
