--- a/portfolio.html
+++ b/portfolio.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="zxx">
-	<head>
-		<title>Priyan Darshana</title>
-		<meta charset="UTF-8">
-		<meta name="description" content="Priyan Darshana">
-		<meta name="keywords" content="photo, html">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- Stylesheets -->
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/font-awesome.min.css" />
-		<link rel="stylesheet" href="css/elegant-icons.css" />
-		<link rel="stylesheet" href="css/owl.carousel.min.css" />
-	
-		<!-- Main Stylesheets -->
-		<link rel="stylesheet" href="css/style.css" />
-	
-		<!--[if lt IE 9]>
+
+<head>
+	<title>Priyan Darshana</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="Priyan Darshana">
+	<meta name="keywords" content="photo, html">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/elegant-icons.css" />
+	<link rel="stylesheet" href="css/owl.carousel.min.css" />
+
+	<!-- Main Stylesheets -->
+	<link rel="stylesheet" href="css/style.css" />
+
+	<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-		 <!-- ========font awesome ====== -->
-		 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-	
-	</head>
+	<!-- ========font awesome ====== -->
+	<link rel="stylesheet" type="text/css"
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+
+</head>
+
 <body>
 	<!-- Page Preloder -->
 	<div id="preloder">
@@ -60,7 +63,7 @@
 		</div>
 	</div>
 	<!-- Offcanvas Menu Section end -->
-	
+
 	<!-- Header section -->
 	<header class="header-section">
 		<a href="./index.html" class="site-logo">
@@ -77,17 +80,28 @@
 		<div class="row gallery-gird">
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item "  href="https://gracelandteafactory.com/" target="_blank">
+				<a class="gallery-item " href="https://gracelandteafactory.com/" target="_blank">
 					<img src="img/projects/17.jpg" alt="">
 					<div class="gi-text">
 						<h4>Graceland Tea Factory</h4>
 						<p>Wordpress</p>
+						<p class="pd-company-credit">BflyDigital Work</p>
 					</div>
 				</a>
 			</div>
 
-			<!-- <div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item "  href="https://epsicontraffic.com.au/" target="_blank">
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item " href="https://ilovecoco.co/" target="_blank">
+					<img src="img/projects/18.jpg" alt="">
+					<div class="gi-text">
+						<h4>I love Coco</h4>
+						<p>Wordpress</p>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item " href="https://epsicontraffic.com.au/" target="_blank">
 					<img src="img/projects/1.jpg" alt="">
 					<div class="gi-text">
 						<h4>Epsicon Traffic Management</h4>
@@ -97,36 +111,39 @@
 			</div>
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item "  href="https://epsicontraffic.com.au/" target="_blank">
-					<img src="img/projects/1.jpg" alt="">
+				<a class="gallery-item " href="https://spiralation.com/" target="_blank">
+					<img src="img/projects/19.jpg" alt="">
 					<div class="gi-text">
-						<h4>Epsicon Traffic Management</h4>
+						<h4>Spiralation</h4>
+						<p>Wordpress</p>
+
+					</div>
+				</a>
+			</div>
+
+
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item " href="https://bhagyahettiarachchi.com/" target="_blank">
+					<img src="img/projects/20.jpg" alt="">
+					<div class="gi-text">
+						<h4>Bhagya Hettiarachchi</h4>
 						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item "  href="https://epsicontraffic.com.au/" target="_blank">
-					<img src="img/projects/1.jpg" alt="">
+				<a class="gallery-item " href="https://aimun.net/" target="_blank">
+					<img src="img/projects/21.jpg" alt="">
 					<div class="gi-text">
-						<h4>Epsicon Traffic Management</h4>
-						<p>Wordpress</p>
-					</div>
-				</a>
-			</div> -->
-
-
-			<!-- ========== -->
-			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item "  href="https://epsicontraffic.com.au/" target="_blank">
-					<img src="img/projects/1.jpg" alt="">
-					<div class="gi-text">
-						<h4>Epsicon Traffic Management</h4>
+						<h4>AIMUN</h4>
 						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
+
+
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item" href="http://www.myframekw.com/" target="_blank">
@@ -142,7 +159,7 @@
 					<img src="img/projects/3.jpg" alt="">
 					<div class="gi-text">
 						<h4>BflyDigital</h4>
-						<p>HTML</p>
+						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
@@ -295,5 +312,6 @@
 	<script src="js/fresco.min.js"></script>
 	<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
