project added with company credits

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
 					<div class="gi-text">
 						<h4>Graceland Tea Factory</h4>
 						<p>Wordpress</p>
-						<p class="pd-company-credit">BflyDigital Work</p>
+						<p class="pd-company-credit">By BflyDigital</p>
 					</div>
 				</a>
 			</div>
@@ -96,6 +96,7 @@
 					<div class="gi-text">
 						<h4>I love Coco</h4>
 						<p>Wordpress</p>
+						<p class="pd-company-credit">By Lizard Advertising</p>
 					</div>
 				</a>
 			</div>
@@ -116,7 +117,7 @@
 					<div class="gi-text">
 						<h4>Spiralation</h4>
 						<p>Wordpress</p>
-
+						<p class="pd-company-credit">By Ogilvy Digital</p>
 					</div>
 				</a>
 			</div>
@@ -139,9 +140,33 @@
 					<div class="gi-text">
 						<h4>AIMUN</h4>
 						<p>Wordpress</p>
+						<p class="pd-company-credit">By Orpheus</p>
 					</div>
 				</a>
 			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item " href="https://boroughmarkets.com.au/" target="_blank">
+					<img src="img/projects/22.jpg" alt="">
+					<div class="gi-text">
+						<h4>Borough Market</h4>
+						<p>Wordpress</p>
+						<p class="pd-company-credit">By Dream Squad</p>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item " href="https://hyperspacehub.com/" target="_blank">
+					<img src="img/projects/23.jpg" alt="">
+					<div class="gi-text">
+						<h4>Hyperspace</h4>
+						<p>Wordpress</p>
+						<p class="pd-company-credit">By Dream Squad</p>
+					</div>
+				</a>
+			</div>
+
 
 
 
@@ -169,6 +194,7 @@
 					<div class="gi-text">
 						<h4>Sanatio Spa</h4>
 						<p>Wordpress</p>
+						<p class="pd-company-credit">By Idea Hub</p>
 					</div>
 				</a>
 			</div>
@@ -196,6 +222,7 @@
 					<div class="gi-text">
 						<h4>Lanka Newsweek</h4>
 						<p>PHP</p>
+						<p class="pd-company-credit">By Ozonedesk</p>
 					</div>
 				</a>
 			</div>
@@ -205,6 +232,7 @@
 					<div class="gi-text">
 						<h4>Creation Master Builders</h4>
 						<p>Wordpress</p>
+						<p class="pd-company-credit">By Web lankan</p>
 					</div>
 				</a>
 			</div>
@@ -214,6 +242,7 @@
 					<div class="gi-text">
 						<h4>Camlo Lanka Website</h4>
 						<p>Wordpress</p>
+						<p class="pd-company-credit">By Web lankan</p>
 					</div>
 				</a>
 			</div>
@@ -223,6 +252,7 @@
 					<div class="gi-text">
 						<h4>Nest Academy Website</h4>
 						<p>Wordpress</p>
+						<p class="pd-company-credit">By Web lankan</p>
 					</div>
 				</a>
 			</div>
@@ -232,6 +262,7 @@
 					<div class="gi-text">
 						<h4>Coco Fresh Website</h4>
 						<p>Wordpress</p>
+						<p class="pd-company-credit">By Web lankan</p>
 					</div>
 				</a>
 			</div>
@@ -241,6 +272,7 @@
 					<div class="gi-text">
 						<h4>Own E-Tutor</h4>
 						<p>HTML/Css</p>
+						<p class="pd-company-credit">By Web lankan</p>
 					</div>
 				</a>
 			</div>
@@ -250,6 +282,7 @@
 					<div class="gi-text">
 						<h4>Tsara Website</h4>
 						<p>Wordpress</p>
+						<p class="pd-company-credit">By Web lankan</p>
 					</div>
 				</a>
 			</div>
@@ -259,6 +292,7 @@
 					<div class="gi-text">
 						<h4>ESES SECRETARIES</h4>
 						<p>HTML/CSS</p>
+						<p class="pd-company-credit">By bflydigital</p>
 					</div>
 				</a>
 			</div>
@@ -268,6 +302,7 @@
 					<div class="gi-text">
 						<h4>NSBM - Responsive/few pages developed</h4>
 						<p>Wordpress</p>
+						<p class="pd-company-credit">By Web lankan</p>
 					</div>
 				</a>
 			</div>
@@ -277,6 +312,7 @@
 					<div class="gi-text">
 						<h4>ISF Website</h4>
 						<p>HTML / CSS</p>
+						<p class="pd-company-credit">By BflyDigital</p>
 					</div>
 				</a>
 			</div>
