employment history update

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 				<div class="row pd-just-centered">
 					<div class="col-lg-8">
 						<h2>Priyan Darshana</h2>
-						<p>Front-End Engineer / UI UX Engineer / Wordpress Developer</p>
+						<p>Web Developer / Wordpress Developer / UI UX Designer</p>
 					</div>
 					<div class="col-lg-4 pd-prof-img-sec">
 						<img src="img/priyan-prof.jpg">
@@ -108,7 +108,7 @@
 							Colombo school of computing.
 						</p>
 						<p>
-							Over 2 years of web development experience and 1+ years of industry experience, I have
+							Over 3 years of web development experience and 2+ years of industry experience, I have
 							worked for clients ranging from individuals and small businesses all the way to large
 							corporations. I have a serious passion for UI effects, animations and creating intuitive,
 							dynamic user experiences.
@@ -142,16 +142,25 @@
 					<h2>Employment History</h2>
 				</div>
 				<div class="col-lg-9">
+
 					<div class="ai-text">
-						<h4>-Dream Squad Private Limited</h4>
+						<h4>- Ogilvy Digital</h4>
 						<p>
-							<span>Front-end Engineer</span> <br>
-							From 2020-02-10 To Present
+							<span>Web Developer</span> <br>
+							From 2021-02-18 To Present
 						</p>
 					</div>
 
 					<div class="ai-text">
-						<h4>-Web Lankan Private Limited</h4>
+						<h4>- Dream Squad Private Limited</h4>
+						<p>
+							<span>Front-end Engineer</span> <br>
+							From 2020-02-10 To 2021-02-02
+						</p>
+					</div>
+
+					<div class="ai-text">
+						<h4>- Web Lankan Private Limited</h4>
 						<p>
 							<span>UI/UX Engineer</span> <br>
 							From 2019-06-13 To 2020-01-31
@@ -159,7 +168,7 @@
 					</div>
 
 					<div class="ai-text">
-						<h4>-Ozone Desk Private Limited</h4>
+						<h4>- Ozone Desk Private Limited</h4>
 						<p>
 							<span>Trainee Web Developer</span> <br>
 							From 2018-12-12 To 2020-05-25
