--- a/about.html
+++ b/about.html
@@ -79,10 +79,10 @@
 				<div class="row pd-just-centered">
 					<div class="col-lg-8">
 						<h2>Priyan Darshana</h2>
-						<p>Web Developer / Wordpress Developer / UI UX Designer</p>
+						<p>Web Developer / Wordpress Developer / UI UX Engineer</p>
 					</div>
 					<div class="col-lg-4 pd-prof-img-sec">
-						<img src="img/priyan-prof.jpg">
+						<img src="img/priyan-prof-3.jpg">
 					</div>
 				</div>
 			</div>
@@ -100,7 +100,7 @@
 				</div>
 				<div class="col-lg-9">
 					<div class="ai-text">
-						<h4>Front-End Engineer / UI UX Engineer / Wordpress Developer</h4>
+						<h4>Web Developer / Wordpress Developer / UI UX Engineer</h4>
 						<p>
 							I am a front-end engineer who has developed products for more than 38 clients.I have
 							developed Websites, Basic systems and System front-ends. I am passionate about building
@@ -171,7 +171,7 @@
 						<h4>- Ozone Desk Private Limited</h4>
 						<p>
 							<span>Trainee Web Developer</span> <br>
-							From 2018-12-12 To 2020-05-25
+							From 2018-12-12 To 2019-05-25
 						</p>
 					</div>
 
