practise task added

--- a/portfolio.html
+++ b/portfolio.html
@@ -123,13 +123,22 @@
 			</div>
 
 
-
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item " href="https://bhagyahettiarachchi.com/" target="_blank">
 					<img src="img/projects/20.jpg" alt="">
 					<div class="gi-text">
 						<h4>Bhagya Hettiarachchi</h4>
 						<p>Wordpress</p>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item" href="https://priyan1995.github.io/js-parallax/" target="_blank">
+					<img src="img/projects/25.jpg" alt="">
+					<div class="gi-text">
+						<h4>Practise Task</h4>
+						<p>HTML/CSS/JS</p>
 					</div>
 				</a>
 			</div>
@@ -166,9 +175,6 @@
 					</div>
 				</a>
 			</div>
-
-
-
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item" href="http://www.myframekw.com/" target="_blank">
@@ -209,7 +215,7 @@
 					</div>
 				</a>
 			</div>
-			
+
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item " href="http://kodafi.com/dev/" target="_blank">
 					<img src="img/projects/6.jpg" alt="">
@@ -262,7 +268,7 @@
 					</div>
 				</a>
 			</div>
-			
+
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item " href="http://www.tsaragreentea.com/" target="_blank">
 					<img src="img/projects/13.jpg" alt="">
@@ -273,7 +279,7 @@
 					</div>
 				</a>
 			</div>
-		
+
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item " href="https://www.nsbm.ac.lk/" target="_blank">
 					<img src="img/projects/16.jpg" alt="">
@@ -315,7 +321,7 @@
 					</div>
 				</a>
 			</div>
-			
+
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item" href="http://piyawardenaassociates.com/esessecretaries.lk" target="_blank">
