--- a/portfolio.html
+++ b/portfolio.html
@@ -78,6 +78,7 @@
 	<!-- Gallery section -->
 	<section class="gallery-section">
 		<div class="row gallery-gird">
+			
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item " href="https://gracelandteafactory.com/" target="_blank">
@@ -116,6 +117,17 @@
 					<img src="img/projects/19.jpg" alt="">
 					<div class="gi-text">
 						<h4>Spiralation</h4>
+						<p>Wordpress</p>
+						<p class="pd-company-credit">By Ogilvy Digital</p>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item " href="https://ferentino.com/" target="_blank">
+					<img src="img/projects/26.jpg" alt="">
+					<div class="gi-text">
+						<h4>Ferentino</h4>
 						<p>Wordpress</p>
 						<p class="pd-company-credit">By Ogilvy Digital</p>
 					</div>
