New project 2 added

--- a/portfolio.html
+++ b/portfolio.html
@@ -134,6 +134,17 @@
 				</a>
 			</div>
 
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item " href="https://priyan.ogilvydigital.tech/lanwa/" target="_blank">
+					<img src="img/projects/27.jpg" alt="">
+					<div class="gi-text">
+						<h4>Lanwa</h4>
+						<p>Wordpress</p>
+						<p class="pd-company-credit">By Ogilvy Digital</p>
+					</div>
+				</a>
+			</div>
+
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item " href="https://bhagyahettiarachchi.com/" target="_blank">
