kfm project added

--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,16 @@
 			</div>
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item " href="https://kuwaitfarmersmarket.com/" target="_blank">
+					<img src="img/projects/kfm.jpg" alt="">
+					<div class="gi-text">
+						<h4>Kuwait Farmers Market</h4>
+						<p>Wordpress</p>						
+					</div>
+				</a>
+			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item " href="https://ilovecoco.co/" target="_blank">
 					<img src="img/projects/18.jpg" alt="">
 					<div class="gi-text">
