--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<i class="far fa-star"></i>
 						<i class="far fa-star"></i>
 					</div>
-					<h2>Angular Developer</h2>
+					<h2>React Developer</h2>
 					<p>Delivering a complete and functioning front end application. Ensuring the high performance of said application across all platforms.</p>
 					<a href="about.html" class="ht-btn">See More <i class="arrow_right"></i></a>
 				</div>
