--- a/about.html
+++ b/about.html
@@ -257,7 +257,7 @@
 					<!-- item -->
 					<div class="col-lg-4">
 						<div class="pd-card">
-							<h4>Typescript</h4>
+							<h4>Angular</h4>
 							<p>
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
@@ -285,7 +285,7 @@
 					<!-- item -->
 					<div class="col-lg-4">
 						<div class="pd-card">
-							<h4>Angular</h4>
+							<h4>React</h4>
 							<p>
 								<i class="fas fa-star"></i>
 								<i class="fas fa-star"></i>
@@ -385,7 +385,7 @@
 				</div>
 				<div class="col-lg-9">
 					<div class="ai-text">
-						<p>- Phone : <a href="tel:+94756095890">+9475 609 5890</a> </p>
+						<p>- Phone : <a href="tel:+94756095890">+9475 609 5890</a> / <a href="tel:+94741251080">+9474 125 1080</a> </p>
 						<p>- Email : <a href="mailto:priyan1995darshana@gmail.com">priyan1995darshana@gmail.com</a> </p>
 						<p>- Social :
 							<a href="https://www.linkedin.com/in/priyan-darshana-487a571b1/" target="_blank">
