--- a/portfolio.html
+++ b/portfolio.html
@@ -145,6 +145,17 @@
 			</div>
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item " href="https://www.guardianacuity.com/" target="_blank">
+					<img src="img/projects/30.jpg" alt="">
+					<div class="gi-text">
+						<h4>Guardian Acuity</h4>
+						<p>UI / Front-End</p>
+						<p class="pd-company-credit">By Ogilvy Digital</p>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item " href="https://spiralation.com/" target="_blank">
 					<img src="img/projects/19.jpg" alt="">
 					<div class="gi-text">
