--- a/portfolio.html
+++ b/portfolio.html
@@ -177,6 +177,18 @@
 				</a>
 			</div>
 
+			
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item " href="https://priyan.ogilvydigital.tech/AOY/" target="_blank">
+					<img src="img/projects/32.jpg" alt="">
+					<div class="gi-text">
+						<h4>AOY</h4>
+						<p>UI / Front-End</p>
+						<p class="pd-company-credit">By Ogilvy Digital</p>
+					</div>
+				</a>
+			</div>
+
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item " href="https://spiralation.com/" target="_blank">
 					<img src="img/projects/19.jpg" alt="">
