new project added

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,6 +78,8 @@
 	<!-- Gallery section -->
 	<section class="gallery-section">
 		<div class="row gallery-gird">
+
+	
 			
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item " href="https://gsffish.com/" target="_blank">
@@ -267,11 +269,11 @@
 			</div>
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item" href="http://www.myframekw.com/" target="_blank">
+				<a class="gallery-item" href="https://madhalankatours.com/" target="_blank">
 					<img src="img/projects/2.jpg" alt="">
 					<div class="gi-text">
-						<h4>MyFrame</h4>
-						<p>HTML</p>
+						<h4>MadhaLanka Tours</h4>
+						<p>Wordpress</p>
 					</div>
 				</a>
 			</div>
