--- a/about.html
+++ b/about.html
@@ -139,15 +139,23 @@
 			<!-- ==== employement history ==== -->
 			<div class="row about-item emp-history">
 				<div class="col-lg-3">
-					<h2>Employment History</h2>
+					<h2>Employment History <span class="exp-sml">(3+ Years)</span></h2>
 				</div>
 				<div class="col-lg-9">
+
+					<div class="ai-text">
+						<h4>- Idea Hub</h4>
+						<p>
+							<span>Senior Front-End Developer</span> <br>
+							 2022-April To Present
+						</p>
+					</div>
 
 					<div class="ai-text">
 						<h4>- Ogilvy Digital</h4>
 						<p>
 							<span>Web Developer</span> <br>
-							From 2021-02-18 To Present
+							 2021-Feb To 2022-April
 						</p>
 					</div>
 
@@ -155,7 +163,7 @@
 						<h4>- Dream Squad Private Limited</h4>
 						<p>
 							<span>Front-end Engineer</span> <br>
-							From 2020-02-10 To 2021-02-02
+							 2020-Feb To 2021-Feb
 						</p>
 					</div>
 
@@ -163,7 +171,7 @@
 						<h4>- Web Lankan Private Limited</h4>
 						<p>
 							<span>UI/UX Engineer</span> <br>
-							From 2019-06-13 To 2020-01-31
+							 2019-June To 2020-Feb
 						</p>
 					</div>
 
@@ -171,7 +179,7 @@
 						<h4>- Ozone Desk Private Limited</h4>
 						<p>
 							<span>Trainee Web Developer</span> <br>
-							From 2018-12-12 To 2019-05-25
+							 2018-Dec To 2019-May
 						</p>
 					</div>
 
